--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,20 @@
 {
+  "MongoDbConfig": {
+    "DatabaseName": "event_store",
+    "CollectionName": "generic_events",
+    "Host": "localhost",
+    "Port": 27017,
+    "Username": "root",
+    "Password": "PASSW0rd"
+  },
+  "PolygonApiConfig": {
+    "Url": "https://api.polygon.io",
+    "ApiKey": "9x9hByHWn3PsYFZGbhc2fliyjb12Aa_L",
+    "ThrottleMilliseconds":  20000
+  },
+  "EventApiConfig": {
+    "Url": "http://event_api:8091"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
