use queue size in api config - rk

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,8 @@
   "PolygonApiConfig": {
     "Url": "https://api.polygon.io",
     "ApiKey": "9x9hByHWn3PsYFZGbhc2fliyjb12Aa_L",
-    "ThrottleMilliseconds":  20000
+    "ThrottleMilliseconds": 20000,
+    "MaxQueueLength":  10000
   },
   "EventApiConfig": {
     "Url": "http://event_api:8091"
