multi-thread data scraper - rk

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,8 +10,9 @@
   "PolygonApiConfig": {
     "Url": "https://api.polygon.io",
     "ApiKey": "9x9hByHWn3PsYFZGbhc2fliyjb12Aa_L",
-    "ThrottleMilliseconds": 15,
-    "MaxQueueLength":  10000
+    "ThrottleMilliseconds": 0,
+    "MaxQueueLength": 10000,
+    "MaxThreads":  4
   },
   "EventApiConfig": {
     "Url": "http://event_api:8091"
