--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "MongoDbConfig": {
     "DatabaseName": "event_store",
-    "CollectionName": "generic_events",
+    "CollectionName": "ticker_data_targets",
     "Host": "localhost",
     "Port": 27017,
     "Username": "root",
