increase queue size

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
     "Url": "https://api.polygon.io",
     "ApiKey": "9x9hByHWn3PsYFZGbhc2fliyjb12Aa_L",
     "ThrottleMilliseconds": 0,
-    "MaxQueueLength": 10000,
+    "MaxQueueLength": 1000000,
     "MaxThreads":  4
   },
   "EventApiConfig": {
